--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "sass": "^1.83.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.3"
   }
 }
